fixed media queries on smaller devices

--- a/style.css
+++ b/style.css
@@ -22,10 +22,6 @@ h2 {
   line-height: 1.5em;
 }
 
-.footer {
-  margin: 1.6em 0;
-}
-
 .block--wrapper {
   padding: 2em 5em;
   height: 91vh;
@@ -84,6 +80,19 @@ h2 {
   margin: 0.2em;
 }
 
+.footer {
+  margin: 1.6em 0;
+}
+
+.a--footer {
+  color: white;
+  text-decoration: none;
+}
+
+.a--footer:hover {
+  text-decoration: underline;
+}
+
 /*? Components */
 
 .devicon-codepen-plain {
@@ -131,22 +140,55 @@ a:hover {
 /*! Media Queries */
 
 @media (max-width: 1397px) {
-  .block--component {
-    display: grid;
-    grid-template-columns: 100%;
+  .block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
+
+  .block--text {
+    width: 80%;
+  }
+
+  .block--component {
+    grid-row: 3;
+    display: flex;
+    align-items: center;
+
+    padding: 1em;
+    margin: 4em 0;
+
+    background-color: white;
+    border-radius: 6px;
+    border: 2px solid black;
+  }
+
+  .block--component > * {
+    margin: 0 1em;
+
+    background-color: white;
+    border-radius: 6px;
+  }
+
   .input--inline {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     width: 95%;
   }
+
+  .footer {
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+  }
 }
 
 @media (max-width: 767.98px) {
   .block--wrapper {
     padding: 2em 2em;
-    height: 91vh;
+    height: 100vh;
   }
   h1 {
     font-size: 3.4em;
@@ -156,7 +198,7 @@ a:hover {
   h2 {
     color: #f0edee;
     font-weight: 100;
-    font-size: 6em;
+    font-size: 1.2em;
     width: 65%;
     line-height: 1.5em;
   }
@@ -166,6 +208,7 @@ a:hover {
     grid-template-columns: 100%;
     grid-template-rows: 1fr 2fr 1fr 1fr;
   }
+
   .block--text {
     grid-row: 2;
     width: 100%;
@@ -186,5 +229,11 @@ a:hover {
     padding: 12px 1px;
     background-color: #f5f5f7;
     border: gray;
+  }
+
+  .footer {
+    display: flex;
+    justify-content: center;
+    padding: 1em;
   }
 }
